python/testData/highlighting/fStringMissingRightBrace.py
f'{42}'
f'{42!r}'
f'{42!r:03}'
f'{42:03}'
f'{42!r:{y}.{z}}'
f'<error descr="'}' is expected"><error descr="Empty expression fragments are not allowed inside f-strings">{</error></error>'
f'<error descr="'}' is expected">{42:<error descr="Empty expression fragments are not allowed inside f-strings">{</error></error>'
f'<error descr="'}' is expected">{42!r:<error descr="Empty expression fragments are not allowed inside f-strings">{</error></error>'
f'{{'
f'{{<error descr="'}' is expected"><error descr="Empty expression fragments are not allowed inside f-strings">{</error></error>'